# 7.0_ft_transcendence

./: docker-compose.yml  env_setup.md  requirements.md  temp.md
docs/: 0.product_requirements.md  0.project_overview.md  1.architectual_decisions.md  1.product_requirements.md  2.architectual_decisions.md  2.technical_decisions.md  3.technical_decisions.md  dev_env_setup.md  overview.md  subject_requirements.md
frontend/: DEV_DOC.md  Makefile  package-lock.json  package.json
frontend/docs/: DEV_DOC.md
frontend/src/: App.tsx
infra/postgres/: Dockerfile  README.md  pyproject.toml  test.py
infra/postgres/init-scripts/: schema.sql
infra/postgres/src/: base_service.py  database.py  models.py
infra/redis/gateway-redis/: Dockerfile
services/auth/: DEV_DOC.md  pom.xml
services/auth/docs/: DEV_DOC.md
services/chat/: .sdkmanrc  Makefile  pom.xml
services/chat/docs/: DEV_DOC.md  README.md
services/chat/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
services/db_service/: Dockerfile  README.md  main.py  schemas.py
services/db_service/src/: main.py  schemas.py
services/forum/: DEV_DOC.md  Dockerfile  Makefile  pyproject.toml  test.py
services/forum/docs/: DEV_DOC.md
services/forum/src/: database.py  logic.py  main.py  models.py  schemas.py
services/gateway/: pom.xml  testcall.sh
services/gateway/.github/: copilot-instructions.md
services/gateway/docs/: README.md
services/gateway/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar
(+63 files in other folders)
